# groove-grammar-lab

./: .gitignore  README.md  app.js  eslint.config.mjs  index.html  locales.js  manifest.json  package-lock.json  package.json  rhythm-packs.js  robots.txt  sitemap.xml  styles.css
.claude/: launch.json
.github/workflows/: pages.yml
electron/: main.js
scripts/: aif-to-wav.mjs  copy-web.mjs  generate-icon.mjs  generate-og-image.mjs  generate-sounds.mjs  generate-web-assets.mjs  local-release-check.mjs  smoke-test.mjs  ux-audit.mjs  validate-styles.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
