[package]
name = "groove-grammar-lab"
version = "1.0.0"
description = "Educational drum machine for phrase-aware rhythm study"
authors = ["Groove Grammar Lab"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
